--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,18 @@
 <!-- popup.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Carbon Footprint Calculator</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="popup.css">
+  <script src="popup.js"></script>
 </head>
+
 <body>
   <div id="content">
     <h2>Carbon Footprint Calculator</h2>
-    <label for="distance">Distance (km):</label>
-    <input type="number" id="distance" placeholder="Enter distance">
-    <button id="calculate">Calculate</button>
-    <div id="result"></div>
+    <p>Time spent on this page: <span id="time">0 seconds</span></p>
+    <p>Estimated carbon footprint: <span id="carbon">0 kgCO2</span></p>
   </div>
-  <script src="popup.js"></script>
 </body>
+
 </html>
