README.md file added

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="content">
-    <h2>Carbon Footprint Calculator</h2>
+    <h2>Carbon Footprint of Working Tab</h2>
     <p>Time spent on this page: <span id="time">0 seconds</span></p>
     <p>Estimated carbon footprint: <span id="carbon">0 kgCO2</span></p>
   </div>
